fix/logapPage: поправил форму регистрации, заработала валидация (#88)

--- a/src/stories/Input/Input.module.scss
+++ b/src/stories/Input/Input.module.scss
@@ -41,6 +41,20 @@ $red: rgba(235, 27, 27, 1);
 	}
 }
 
+.error {
+	margin: 0;
+	margin: 4px 0 0 14px;
+	max-width: 358px;
+	font-family: 'SF-Pro', Arial, Helvetica, sans-serif;
+	color: #EE3465;
+	font-size: 16px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	box-sizing: border-box;
+	height: 15px;
+  }
+
 .label {
 	font-size: 18px;
 	font-weight: 600;
@@ -60,9 +74,9 @@ $red: rgba(235, 27, 27, 1);
 	cursor: pointer;
 }
 
-.error {
+/* .error {
 	color: $red;
 	font-size: 16px;
 	line-height: 22px;
 	margin: 4px 0 0 14px;
-}
+} */
